--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,29 @@
-/* You can add global styles to this file, and also import other style files */
+.example-container {
+    width: 100%;
+    height: 100%;
+  }
+  
+  mat-drawer-content {
+    padding: 12px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    /* margin-right: 30px;
+    margin-left: 30px; */
+  }
+  mat-drawer{
+    width: 200px;
+    height: 100%;
+  }
+  .img{
+    margin: auto;
+    text-align: center;
+}
+
+.content{
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
