--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,3 +1,4 @@
+<mat-progress-bar *ngIf="showSpinner" mode="query"></mat-progress-bar>
 <mat-toolbar class="mb-2">
     <span class="ml-2">My App</span>
     <span class="example-spacer"></span>
@@ -7,4 +8,4 @@
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
      <mat-icon>share</mat-icon>
    </button>
-</mat-toolbar>
+</mat-toolbar> 
